--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": " node main.js",
+    "dev": "nodemon main.js"
   },
   "repository": {
     "type": "git",
