--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "axios": "^1.3.4",
     "material": "^0.5.3",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.8.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
