--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.4",
     "material": "^0.5.3",
     "react": "^18.2.0",
