--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb+srv://webwiz:webwiz123@cluster0.vemo9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URI=mongodb+srv://BonifaceMbogho:16200bonii@tiba-hospital-api.910fhbh.mongodb.net/
 PORT=5000
